apk generation code added

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,7 +2,7 @@
   "name": "RealEstateApp",
   "integrations": {
     "capacitor": {
-      "enabled": false
+      "enabled": true
     },
     "cordova": {}
   },
