--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "6.0.0",
+    "@awesome-cordova-plugins/call-number": "^6.9.0",
+    "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.1.2",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-call-number": "^1.0.1",
     "ionicons": "^7.0.0",
     "ng-otp-input": "^1.9.3",
     "rxjs": "~7.8.0",
@@ -44,7 +47,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "6.0.0",
+    "@capacitor/cli": "^6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
