--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.1.2",
     "@capacitor/keyboard": "6.0.0",
