--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,14 @@
               ],
               "outputHashing": "all"
             },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -75,6 +83,9 @@
           "configurations": {
             "production": {
               "buildTarget": "app:build:production"
+            },
+            "dev": {
+              "buildTarget": "app:build:dev"
             },
             "development": {
               "buildTarget": "app:build:development"
